--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,84 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:layout_width="match_parent"android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrincipal"
-    android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:layout_height="match_parent" >
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrincipal"
+        android:orientation="vertical"
+        tools:context=".LoginActivity">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/world" />
-
-
-        <EditText
-            android:id="@+id/edtUsuario"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/borda"
-            android:drawableRight="@drawable/ic_account_circle_black_dp"
-            android:hint="@string/usuario"
-            android:inputType="textPersonName"
-            android:padding="10dp" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edtSenha"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/world" />
+
+
+            <EditText
+                android:id="@+id/edtUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/borda"
+                android:drawableRight="@drawable/ic_account_circle_black_dp"
+                android:hint="@string/usuario"
+                android:inputType="textPersonName"
+                android:padding="10dp" />
+
+            <EditText
+                android:id="@+id/edtSenha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/borda"
+                android:drawableRight="@drawable/ic_lock_dp"
+                android:hint="@string/senha"
+                android:inputType="textPassword"
+                android:padding="10dp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/borda"
-            android:drawableRight="@drawable/ic_lock_dp"
-            android:hint="@string/senha"
-            android:inputType="textPassword"
-            android:padding="10dp" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnEntrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorBackground"
+                android:onClick="entrarApp"
+                android:text="@string/entrar"
+                android:textColor="@color/colorFont" />
+
+            <Button
+                android:id="@+id/btnSair"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorBackground"
+                android:onClick="sairApp"
+                android:text="@string/sair"
+                android:textColor="@color/colorFont" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnEntrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorBackground"
-            android:onClick="entrarApp"
-            android:text="@string/entrar"
-            android:textColor="@color/colorFont"
-            android:layout_marginRight="3dp"
-            android:layout_marginLeft="3dp"/>
-
-        <Button
-            android:id="@+id/btnSair"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorBackground"
-            android:onClick="sairApp"
-            android:text="@string/sair"
-            android:textColor="@color/colorFont"
-            android:layout_marginRight="3dp"/>
-
-    </LinearLayout>
-
-</LinearLayout>
 
 </ScrollView>
