--- a/app/src/main/res/layout/menu_principal_layout.xml
+++ b/app/src/main/res/layout/menu_principal_layout.xml
@@ -8,10 +8,9 @@
     tools:context=".MenuPrincipalActivity">
 
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:text="Janela Principal"/>
-
+        android:text="SAIR"
+        />
 </LinearLayout>
